@@ -71,34 +71,48 @@ install: build
 
 # Build architecture-independent files here.
 binary-indep: build install
-# We have nothing to do by default.
+	dh_testdir -i
+	dh_testroot -i
+	dh_installchangelogs -i ChangeLog
+	dh_installdocs -i
+	find $(CURDIR)/debian/libsbuild-doc/usr/share/doc/libsbuild-doc -name '*.map' -print0 | xargs -0 rm -f
+	find $(CURDIR)/debian/libsbuild-doc/usr/share/doc/libsbuild-doc -name '*.md5' -print0 | xargs -0 rm -f
+	dh_installexamples -i
+	dh_installman -i
+	dh_link -i
+	dh_compress -i
+	dh_fixperms -i
+	dh_installdeb -i
+	dh_gencontrol -i
+	dh_md5sums -i
+	dh_builddeb -i
 
 # Build architecture-dependent files here.
 binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
+	dh_testdir -a
+	dh_testroot -a
+	dh_installchangelogs -a ChangeLog
+	dh_installdocs -a
 	rm -rf $(CURDIR)/debian/dchroot/usr/share/doc/dchroot
 	ln -sf schroot $(CURDIR)/debian/dchroot/usr/share/doc/dchroot
 	rm -rf $(CURDIR)/debian/dchroot-dsa/usr/share/doc/dchroot-dsa
 	ln -sf schroot $(CURDIR)/debian/dchroot-dsa/usr/share/doc/dchroot-dsa
-	dh_installexamples
-	dh_installman
-	dh_installinit --no-start --update-rcd-params='start 75 S .'
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
+	dh_installexamples -a
+	dh_installman -a
+	dh_installinit -a --no-start --update-rcd-params='start 75 S .'
+	dh_link -a
+	dh_strip -a
+	dh_compress -a
+	dh_fixperms -a
 	chmod 4755 $(CURDIR)/debian/dchroot/usr/bin/dchroot
 	chmod 4755 $(CURDIR)/debian/dchroot-dsa/usr/bin/dchroot-dsa
 	chmod 4755 $(CURDIR)/debian/schroot/usr/bin/schroot
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps -L libsbuild1 -l$(CURDIR)/debian/libsbuild1/usr/lib
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh_makeshlibs -a
+	dh_installdeb -a
+	dh_shlibdeps -a -L libsbuild1 -l$(CURDIR)/debian/libsbuild1/usr/lib
+	dh_gencontrol -a
+	dh_md5sums -a
+	dh_builddeb -a
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
