@@ -6,6 +6,10 @@ schroot (1.1.2-1) UNRELEASED; urgency=low
     - libsbuild1-dev is in Section devel.
     - Use ${source:Version} to allow binNMUs.
     - Add new package, libsbuild-doc.
+  * debian/rules:
+    - Split arch-dependendent and arch-independent packages into seprate
+      rules.
+    - Remove .map and .md5 files from the Doxygen docs.
   * debian/libsbuild-doc.docs: New file.  Install doxygen HTML
     documentation and tag file.
   * debian/libsbuild-doc.doc-base: Register docs with doc-base.
